--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,8 +32,8 @@
           <div class="navbar-nav">
             <a class="nav-item nav-link active" href="/">Search <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="/dashboard">Dashboard</a>
-            <a class="nav-item nav-link" href="/">ERD</a>
-            <a class="nav-item nav-link" href="/">Database</a>
+            <a class="nav-item nav-link" href="/erd">ERD</a>
+            <a class="nav-item nav-link" href="/db">Database</a>
           </div>
         </div>
       </nav>
